# bad-editor

./: CMakeLists.txt  main.cpp
